<resources>
    <string name="app_name">lesson3</string>
    <string name="card_number">Карта №7898769</string>
    <string name="spec">Специалист</string>
    <string name="logo">logo</string>
    <string name="personal_info">Личные данные</string>
    <string name="name">Имя</string>
    <string name="actual_name">Анастасия</string>
    <string name="surname">Фамилия</string>
    <string name="actual_surname">Антонина</string>
    <string name="e_mail">E-Mail</string>
    <string name="actual_email">any.box@gmail.ru</string>
    <string name="actual_login">HIE023UOI88</string>
    <string name="login">Логин</string>
    <string name="region">Ваш регион</string>
    <string name="actual_region">Санкт-Петербург</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="first_activity_button">Первое активити</string>
    <string name="second_activity_button">Второе активити</string>
    <string name="third_activity_button">Третье активити</string>
</resources>