<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/toFirstActivity"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/first_activity_button"
        android:layout_marginTop="300dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/toSecondActivity"
        android:layout_width="wrap_content"
        android:text="@string/second_activity_button"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/toThirdActivity"
        android:layout_width="wrap_content"
        android:text="@string/third_activity_button"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>