<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:titleEnabled="false">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_marginTop="55dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:layout_width="330dp"
                    android:layout_height="104dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="24dp"
                    android:background="@color/white" />

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="49dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/ic_spec" />

                <TextView
                    style="@style/ContentCardStyle"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="33dp"
                    android:text="@string/card_number" />

                <TextView
                    style="@style/ContentCardStyle"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="52dp"
                    android:text="@string/spec" />

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="Личный кабинет" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="800dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <include layout="@layout/main_part" />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>